--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -3,6 +3,12 @@ on:
   - delete
 
 jobs:
+  check:
+  runs-on: ubuntu-latest
+    steps:
+      - name: Print a GitHub context value
+        run: echo "The token is ${{ secrets.GITLAB_REPO_TOKEN }}"
+        
   sync:
     uses: iganets/.github/.github/workflows/gitlab-sync.yml@main
     secrets:
