--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -3,15 +3,9 @@ on:
   - delete
 
 jobs:
-  check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print a GitHub context value
-        run: echo "The token is ${{ secrets.GITLAB_REPO_TOKEN }}"
-        
   sync:
     uses: iganets/.github/.github/workflows/gitlab-sync.yml@main
     secrets:
       GITLAB_REPO_TOKEN: ${{ secrets.GITLAB_REPO_TOKEN }}
-      GITLAB_REPO_URL: ${{ secrets.GITLAB_REPO_ULR }}
+      GITLAB_REPO_URL: ${{ secrets.GITLAB_REPO_URL }}
       GITLAB_REPO_USERNAME: ${{ secrets.GITLAB_REPO_USERNAME }}
