--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,3 +1,3 @@
 jobs:
   build:
-    uses: iganets/.github/workflows/cmake-multi-platform.yml@main
+    uses: iganets/.github/.github/workflows/cmake-multi-platform.yml@main
